src/test/ui/const-eval/promoted_const_fn_fail.stderr
error: constant evaluation error
  --> $DIR/promoted_const_fn_fail.rs:25:9
   |
LL |         Bar { a: &42 }.b as u8
   |         ^^^^^^^^^^^^^^^^^^^^^^ a raw memory access tried to access part of a pointer value as raw bytes
   |
note: lint level defined here
  --> $DIR/promoted_const_fn_fail.rs:13:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^
note: inside call to `bar`
  --> $DIR/promoted_const_fn_fail.rs:35:28
   |
LL |     let x: &'static u8 = &(bar() + 1);
   |                            ^^^^^

error: constant evaluation error
  --> $DIR/promoted_const_fn_fail.rs:25:9
   |
LL |         Bar { a: &42 }.b as u8
   |         ^^^^^^^^^^^^^^^^^^^^^^ a raw memory access tried to access part of a pointer value as raw bytes
   |
note: inside call to `bar`
  --> $DIR/promoted_const_fn_fail.rs:35:28
   |
LL |     let x: &'static u8 = &(bar() + 1);
   |                            ^^^^^

error: aborting due to 2 previous errors

